# mitewarrior

./: Cargo.toml  README.md  config.yaml
src/: config.rs  main.rs  mite.rs  taskwarrior.rs  theme.toml  timew_input.rs  tw_entry.rs  ui.rs
src/mite/: customer.rs  project.rs  service.rs
src/model/: mod.rs  project_selection.rs
