[package]
name = "mitewarrior"
version = "1.1.0"
edition = "2018"
authors = [ "Karl Grasegger <karl.grasegger@egbruederheitz.de>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
xdg = "2.4.1"
serde_yaml = "0.9"
serde_json = "1.0"
cursive = { version = "0.20", features = ["toml"] }
ureq = {version = "2.4.0", features = ["json"] }
regex = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"